--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
         <p class="banner__texto">Encontre em nossa estante o que você precisa para o seu desenvolvimento</p>
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
+    <div class="card">
+        <div>class="card__descrição">
+        <div>class="descrição__>
+    <h3 class="=descrição__titulo">talvez você se interesse por ...</h3>
+        <h2 class="descrição__titulo-livro"> Angular 11 e Firebase </h2>
+        <p class="descriçaõ__texto>"construindo uma aplicação integrada com a plataforma Google.</p>"
+    </div>
+    <Img scr="Img/Angular.svg" class= "descrição__imagem">
+        </div>
+        div class=" card botões">
+        <ul class=botões">
+        <li class=botões__item"> <img src="Img/Favoritos.svg"alt=favoritar".></li>li>
+        <li class= "botões__item">< img src="="<Img>/compras.svg" alt= adicionar ao Carrinho de compras"></
+            li>
+            </ul>
+            <a href="#" class="botões__ancora".saiba mais</a>       
+         </a>div>
+    </div>
 </body>
 </html>
 
